--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -8,5 +8,14 @@
         android:icon="@drawable/ic_action_name"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView" />
-
+    <item
+        android:id="@+id/add_book"
+        android:icon="@android:drawable/ic_menu_add"
+        android:title="Add book"
+        app:showAsAction="ifRoom|withText"/>
+    <item
+        android:id="@+id/logout"
+        android:icon="@android:drawable/btn_dialog"
+        android:title="Logout"
+        app:showAsAction="ifRoom|withText"/>
 </menu>
