--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -19,7 +19,13 @@
             android:id="@+id/img"/>
 
     </LinearLayout>
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/msg"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:text="Send Message"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
