--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,15 +5,19 @@
     android:orientation="vertical"
     tools:context=".ChatActivity">
 
+
     <ListView
         android:id="@+id/messages_list"
         android:layout_weight="100"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:stackFromBottom = "true"
+        android:transcriptMode="alwaysScroll"
         android:divider="@null"/>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
+        android:layout_gravity="bottom"
         android:layout_height="wrap_content">
 
         <EditText
