--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -11,58 +11,85 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="com.example.himaneeshchhabra.loginproject.BookActivity">
-
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
+        android:orientation="vertical">
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Enter your books" />
-        <AutoCompleteTextView
+            android:background="@drawable/form_xml"
+            android:padding="10dp"
+            android:id="@+id/bookname"
+            android:hint="Enter book name"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="20dp"></LinearLayout>
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/auto"/>
-    </LinearLayout>
-    <LinearLayout
+            android:background="@drawable/form_xml"
+            android:padding="10dp"
+            android:id="@+id/bookauthor"
+            android:hint="Enter author name"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="20dp"></LinearLayout>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/form_xml"
+            android:padding="10dp"
+            android:id="@+id/bookprice"
+            android:hint="Enter book price"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"></LinearLayout>
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="199dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Do u want to sell this book?"/>
-        <EditText
-            android:layout_width="match_parent"
+            android:background="@drawable/form_xml"
+            android:padding="10dp"
+            android:text="@string/sell"/>
+        <Spinner
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/book_sell" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="20dp"></LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="203dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Do u want to rent this book"/>
-        <EditText
-            android:layout_width="165dp"
+            android:background="@drawable/form_xml"
+            android:padding="10dp"
+            android:text="@string/rent"/>
+        <Spinner
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/book_rent" />
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="AddBook"
-            android:id="@+id/button4"
-            android:onClick="onAdd"/>
-    </LinearLayout>
-    <LinearLayout
+            android:layout_height="20dp"></LinearLayout>
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -86,7 +113,10 @@
             />
 
     </LinearLayout>
-    <LinearLayout
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="10dp"></LinearLayout>
+            <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
@@ -97,7 +127,10 @@
             android:background="@drawable/stack_of_books"
             />
     </LinearLayout>
-    <LinearLayout
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="10dp"></LinearLayout>
+            <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
@@ -105,9 +138,13 @@
             android:layout_height="wrap_content"
             android:text="Insert Book"
             android:id="@+id/insert_book"
+            android:background="@drawable/button_xml"
             android:onClick="onInsert"/>
     </LinearLayout>
-    <LinearLayout
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="10dp"></LinearLayout>
+            <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <Button
@@ -115,6 +152,10 @@
         android:layout_height="wrap_content"
         android:text="Logout"
         android:id="@+id/logout1"
+        android:background="@drawable/button_xml"
         android:onClick="onLogout"/>
     </LinearLayout>
+    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
+
