--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
+        android:layout_margin="10dp"
         android:id="@+id/message"
         android:gravity="center"
-        android:layout_width="wrap_content"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"/>
+
 
 </LinearLayout>
