--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -18,4 +18,9 @@
         android:icon="@android:drawable/btn_dialog"
         android:title="Logout"
         app:showAsAction="ifRoom|withText"/>
+    <item
+        android:id="@+id/profile"
+        android:icon="@android:drawable/btn_star"
+        android:title="Profile"
+        app:showAsAction="ifRoom|withText"/>
 </menu>
