--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,14 +28,14 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/editText2"
-        android:hint="Password"
+        android:hint="@string/pass"
         android:layout_below="@+id/editText1"
         android:background="@drawable/edit_xml"
         android:layout_alignLeft="@+id/editText1"
         android:layout_alignStart="@+id/editText1" />
 
     <TextView
-        android:text="Sign In"
+        android:text="@string/signin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
@@ -54,13 +54,13 @@
         android:layout_marginTop="13dp"
         android:layout_marginLeft="50dp"
         android:id="@+id/editText1"
-        android:hint="Username"
+        android:hint="@string/username"
         android:layout_below="@+id/textView"
         android:layout_alignRight="@+id/button1"
         android:layout_alignEnd="@+id/button1" />
 
     <Button
-        android:text="Not a Registered User. Please Sign Up."
+        android:text="@string/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button2"
@@ -70,7 +70,7 @@
         android:layout_marginBottom="43dp" />
 
     <TextView
-        android:text="OR"
+        android:text="@string/or"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView3"
@@ -81,7 +81,7 @@
         android:layout_marginBottom="43dp" />
 
     <Button
-        android:text="Proceed"
+        android:text="@string/proceed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button1"
