--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -25,7 +25,7 @@
         android:id="@+id/msg"
         android:layout_gravity="center"
         android:visibility="gone"
-        android:text="Send Message"/>
+        android:text="@string/send"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
