--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="10dp"
-        android:text="Please Check Network Connection"
+        android:text="@string/Network"
         android:textColor="@android:color/white"
         android:textSize="15dp"
         android:textStyle="bold"/>
